--- a/css/headFoot.css
+++ b/css/headFoot.css
@@ -66,8 +66,6 @@ footer p { margin-top: 10px; color: #222; }
 .noneResult p { margin-top: 20px; font-size: 16px; } 
 
 
-
-
 /* --------------- responsible --------------- */
 
 @media screen and (max-width: 768px) {
@@ -88,8 +86,8 @@ footer p { margin-top: 10px; color: #222; }
 .menuTrigger.active span:nth-child(3) { opacity: 0; transform: rotate(0deg) scale(0.2, 0.2); } 
 .menuTrigger.active span:last-child { transform: rotate(-45deg) translate(0, -1px); } 
 
-.gnb .gnbInner { position: absolute; top: -50px; right: -150%; width: 0; height: 100vh; flex-direction: column; justify-content: flex-start; align-items: center; padding: 50px; -webkit-font-smoothing: antialiased; background: #fff; transform-origin: 0% 0%; transform: translate(-100%, 0); transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0); box-shadow: 0 6px 15px #0e0e0e59; } 
- .gnb .gnbInner.active { width: 55vw; right: -200%; } 
+.gnb .gnbInner { position: absolute; top: -50px; right: -100%; width: 0; height: 100vh; flex-direction: column; justify-content: flex-start; align-items: center; padding: 50px; -webkit-font-smoothing: antialiased; background: #fff; transform-origin: 0% 0%; transform: translate(-100%, 0); transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0); box-shadow: 0 6px 15px #0e0e0e59; } 
+ .gnb .gnbInner.active { width: 55vw; right: -150%; } 
 
  .gnb .gnbTab { flex-direction: column; margin-top: 70px; width: 100%; } 
  .gnb .gnbTab li { margin-top: 20px; width: 100%; padding-bottom: 20px; border-bottom: 1px solid #ddd; font-size: 18px; font-family: pBold; text-align: center; } 
@@ -106,8 +104,9 @@ footer p { margin-top: 10px; color: #222; }
  .together img { width: 21px; margin-bottom: 2px; } 
 
 
- footer { padding: 10px 6%;}
- footer img { width: 150px; margin: 0 0 0 -5px; }
+ footer { padding: 10px 6%; height: 170px; font-size: 12px;}
+ footer p:last-child { font-size: 11px; font-family: pLight; color: #777;}
+ footer img { width: 130px; margin: 0 0 0 -7px; }
 
  
  }
