--- a/css/main.css
+++ b/css/main.css
@@ -148,8 +148,8 @@ to { opacity: 1; transform: none; }
 /* --------------- responsible --------------- */
 
 @media screen and (max-width: 768px){
- .mainBnLogo { width: 300px; filter: drop-shadow(2px 2px 3px #00000052); } 
- .mainCon p { width: 320px; font-size: 17px; } 
+ .mainBnLogo { width: 250px; filter: drop-shadow(2px 2px 3px #00000052); } 
+ .mainCon p { width: 320px; font-size: 16px; } 
 
  .scrollDown { left: 46%; bottom: 5%; padding-top: 45px; font-size: 15px; } 
  .scrollDown span { top: -20px; left: 33%; width: 20px; height: 20px; margin-left: calc( 100vw * -12 / 1920 ); border-left: 2px solid #666; border-bottom: 2px solid #666; } 
@@ -161,8 +161,11 @@ to { opacity: 1; transform: none; }
  .bContent p { padding: 0 25px; text-shadow: 2px 2px 6px #1c1c1cd7; font-size: 20px; text-align: center; } 
 
 
+ .mainSection .titleTxt { font-size: 18px;}
  /* -------------------- 여행 상품 ------------------------------- */
- .itemAll { margin: 20px 0; padding-bottom: 30px; display: flex; flex-direction: column; } 
+ .epicTxt::before { top: 13px; width: 108px; height: 10px; }
+
+ .itemAll { margin: 0; padding-bottom: 30px; display: flex; flex-direction: column; } 
  .itemOne { width: 100%; height: 100%; margin: 15px 0; } 
  .itemOne:nth-child(2) ~ .itemOne { display: none; } 
  .itemOne .post { height: 160px; } 
@@ -176,7 +179,7 @@ to { opacity: 1; transform: none; }
 
 
  /* ------------------- 동행 ------------------- */
- .groAll, .schAll { width: 100%; margin: 20px 0; display: flex; flex-direction: column; } 
+ .groAll, .schAll { width: 100%; margin: 0; display: flex; flex-direction: column; } 
  
  .groAll .goDetail { width: 100%; margin: 10px 0; } 
  .schOne { width: 100%; height: 100%; position: relative; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; } 
