--- a/css/mypage.css
+++ b/css/mypage.css
@@ -295,8 +295,8 @@ to { opacity: 1; transform: none; }
  
  .howto { margin-bottom: 20px; } 
  .howto img { width: calc( 100vw * 650 / 768); margin: 0; } 
- .howto p { color: #666; font-size: 13px; line-height: 120%; text-align: left; } 
- .sment { top: 3%; left: 7%; } 
+ .howto p { color: #666; font-size: 12px; font-family: pRegular; line-height: 120%; text-align: left; } 
+ .sment { top: 4%; left: 7%; } 
  .fment { top: 63%; left: 0; } 
  
  .gionement { margin: 0; background: #f1f1f1; padding: 13px 15px; } 
@@ -357,21 +357,45 @@ to { opacity: 1; transform: none; }
 /* -------------------- mybill ------------------------- */
 
 .itemAll { margin: 20px 0; padding-bottom: 30px; display: flex; flex-direction: column; } 
-.itemOne { width: 100%; height: 100%; margin: 15px auto; } 
+.itemOne { width: 93%; height: 100%; margin: 15px auto; } 
 .itemOne .post { height: 140px; } 
 
 .postImg { width: 100%; } 
  .postImg img { width: 100%; height: 100%; object-fit: cover; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); transition: transform 0.3s; } 
- .postBottom { width: 90%; height: 70px; } 
+ .postBottom { width: 90%; height: 65px; margin: 12px auto; } 
  
- .postBottom .infoText { font-size: 16px; } 
+ .postBottom .infoText { font-size: 15px; } 
  .locPay p { font-size: 13px; } 
  
  /* -------------------- myreview ------------------------- */
 
- .rvAll .buyitem { width: 90%; padding: 10px;}
+ .rvAll .buyitem { width: 90%; padding: 5px 15px;}
+ .buyitem h1 { font-size: 15px; }
+ .buyitem p { font-size: 13px; }
+ .redatedel span { font-size: 12px; }
+ .redatedel button { font-size: 12px; }
 
+ /* --------------------- mygroup ------------------------- */
+ .groAll { width: 100%; margin: 20px 0 0 0; display: flex; flex-direction: column; } 
+ .groAll .goDetail { width: 100%; margin: 10px 0 0 0; } 
 
+ .schOne { width: 96%; height: 100%; margin: 0 auto; border-radius: 12px; box-shadow: 1px 1px 7px #8585856b; } 
+ .schTopInfo { left: 3%; padding: 5px 15px; font-size: 12px; } 
+ .schTopInfo .schNicK { font-size: 15px;}
+ .schUser div span:last-child { font-size: 13px; }
+ .schDays p:first-child, .schTopInfo .subTxt { font-size: 12px; }
+ .schOne .post { width: 100%; height: 150px; } 
+ 
+ .postLoc { top: 27%; padding: 7px 10px 7px 22px; font-size: 11px; border-radius: 8px; }
+ .postLoc::before { top: 20%; left: 6%; }
+
+ .goDetail .postImg { width: 100%; } 
+ .goDetail .postBottom { width: 90%; height: 100%; padding: 5px 0 15px 0; } 
+ .goDetail .postBottom h3 { width: 98%; font-size: 14px; } 
+
+ .hiddenBox { height: 45px; padding: 20px 23px; font-size: 13px; } 
+ .hiddenBox .viewCnt::before { top: -2px; left: -25px; } 
+ .hiddenBox .chatCnt::before { top: -2px; left: -25px; } 
 
 }
  
