--- a/css/slick_theme.css
+++ b/css/slick_theme.css
@@ -1,54 +1,52 @@
 /* Arrows */
 .slick-prev,
-.slick-next
-{
+.slick-next {
     font-size: 0;
     line-height: 0;
-    
+
     position: absolute;
     top: 50%;
-    
+
     display: block;
-    
+
     width: 20px;
     height: 20px;
     padding: 0;
     -webkit-transform: translate(0, -50%);
     -ms-transform: translate(0, -50%);
     transform: translate(0, -50%);
-    
+
     cursor: pointer;
-    
+
     color: transparent;
     border: none;
     outline: none;
     background: transparent;
 }
+
 .slick-prev:hover,
 .slick-prev:focus,
 .slick-next:hover,
-.slick-next:focus
-{
+.slick-next:focus {
     color: transparent;
     outline: none;
     background: transparent;
 }
+
 .slick-prev:hover:before,
 .slick-prev:focus:before,
 .slick-next:hover:before,
-.slick-next:focus:before
-{
+.slick-next:focus:before {
     opacity: 1;
 }
+
 .slick-prev.slick-disabled:before,
-.slick-next.slick-disabled:before
-{
+.slick-next.slick-disabled:before {
     opacity: .25;
 }
 
 .slick-prev:before,
-.slick-next:before
-{
+.slick-next:before {
     font-family: 'slick';
     font-size: 20px;
     line-height: 1;
@@ -67,19 +65,18 @@
     background-color: #ffffff7a;
 }
 
-.slick-prev
-{
+.slick-prev {
     left: 0;
     bottom: 0;
     z-index: 3;
 }
-[dir='rtl'] .slick-prev
-{
+
+[dir='rtl'] .slick-prev {
     right: -25px;
     left: auto;
 }
-.slick-prev:before
-{
+
+.slick-prev:before {
     position: absolute;
     bottom: -50px;
     left: 70px;
@@ -91,27 +88,25 @@
     border-radius: 30px;
     opacity: .6;
     background-color: #ffffff89;
-    content: url(../source/arrow_l.png); 
+    content: url(../source/arrow_l.png);
 }
 
-[dir='rtl'] .slick-prev:before
-{
+[dir='rtl'] .slick-prev:before {
     content: '→';
 }
 
-.slick-next
-{
+.slick-next {
     right: 0;
     bottom: 0;
     z-index: 3;
 }
-[dir='rtl'] .slick-next
-{
+
+[dir='rtl'] .slick-next {
     right: auto;
     left: -25px;
 }
-.slick-next:before
-{
+
+.slick-next:before {
     position: absolute;
     bottom: -50px;
     right: 70px;
@@ -123,21 +118,19 @@
     border-radius: 30px;
     opacity: .6;
     background-color: #ffffff89;
-    content: url(../source/arrow_r.png); 
+    content: url(../source/arrow_r.png);
 }
-[dir='rtl'] .slick-next:before
-{
+
+[dir='rtl'] .slick-next:before {
     content: '←';
 }
 
 /* Dots */
-.slick-dotted.slick-slider
-{
+.slick-dotted.slick-slider {
     margin-bottom: 30px;
 }
 
-.slick-dots
-{
+.slick-dots {
     position: absolute;
     bottom: -40px;
 
@@ -151,8 +144,8 @@
 
     text-align: center;
 }
-.slick-dots li
-{
+
+.slick-dots li {
     position: relative;
 
     display: inline-block;
@@ -164,8 +157,8 @@
 
     cursor: pointer;
 }
-.slick-dots li button
-{
+
+.slick-dots li button {
     font-size: 0;
     line-height: 0;
 
@@ -182,18 +175,18 @@
     outline: none;
     background: transparent;
 }
+
 .slick-dots li button:hover,
-.slick-dots li button:focus
-{
+.slick-dots li button:focus {
     outline: none;
 }
+
 .slick-dots li button:hover:before,
-.slick-dots li button:focus:before
-{
+.slick-dots li button:focus:before {
     opacity: 1;
 }
-.slick-dots li button:before
-{
+
+.slick-dots li button:before {
     font-size: 6px;
     line-height: 20px;
 
@@ -217,8 +210,55 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-.slick-dots li.slick-active button:before
-{
+
+.slick-dots li.slick-active button:before {
     opacity: 1;
     color: black;
+}
+
+
+/* --------------- responsible --------------- */
+
+@media screen and (max-width: 768px) {
+    .slick-prev:before {
+        bottom: -15px;
+        left: 10px;
+        height: 22px;
+        width: 22px;
+        opacity: 1;
+        background-color: #ffffffbb;
+    }
+
+    .slick-next:before {
+        bottom: -15px;
+        right: 10px;
+        height: 22px;
+        width: 22px;
+        opacity: 1;
+        background-color: #ffffffbb;
+    }
+
+    .slick-dots li button:before {
+        bottom: 80px;
+        left: 0;
+        width: 7px;
+        height: 7px;
+        opacity: .7;
+        box-shadow: 0 0 8px #535353;
+        border-radius: 50%;
+    }
+
+}
+
+@media screen and (min-width: 1024px) {
+    body {
+        background-color: aqua;
+    }
+
+}
+
+@media screen and (min-width: 1440px) {
+    body {
+        background-color: gray;
+    }
 }
