--- a/css/message.css
+++ b/css/message.css
@@ -151,11 +151,18 @@ section { min-height: calc(100vh - 240px); margin-top: 150px; margin-bottom: 120
     .selchat button { padding: 6px 13px; width: auto; height: auto; border-radius: 6px; font-size: 13px; }
     .selchat .ms { margin: 0;}
 
-    .chatandlist { flex-direction: column; }
+    .chatandlist { flex-direction: column; margin-top: 10px; }
     .chatListInner { padding: 20px; }
     .chatListinin { height: 280px; }
     .chatList { width: 100%; height: 350px; margin-bottom: 20px; }
-    .chatListInner h3 { padding: 10px 0; font-size: 15px;}
+    .chatListInner h3 { padding: 10px 0; margin-bottom: 10px; font-size: 15px;}
+
+    .chatroom img { width: 45px; height: 45px; }
+    .roomtitle { margin-top: 0;}
+    .roomtitle span { font-size: 12px; color: #afafaf;}
+
+    .listmsgtime { margin-top: 5px; }
+    .listmsgtime span { font-size: 12px; }
 
 
     .chatBoard { width: 100%; }
