--- a/css/headFoot.css
+++ b/css/headFoot.css
@@ -99,13 +99,13 @@ footer p { margin-top: 10px; color: #222; }
  .gnbTab li a.active { color: var(--color-main); border: none; } 
 
  .gnbBottom { padding: 10px 0 0 0; margin: 0 5.5%; margin-bottom: 10px; border-top: 1px solid #e0e0e0; } 
- .gnbBottom a { padding: 4px 10px; margin-right: 5px; border-radius: 9px; font-size: 15px; } 
+ .gnbBottom a { padding: 4px 10px; margin-right: 5px; border-radius: 9px; font-size: 14px; } 
  .gnbBottom img { width: 17px; margin-right: 5px; margin-bottom: 3px} 
  .together img { width: 21px; margin-bottom: 2px; } 
 
-
  footer { padding: 10px 6%; height: 170px; font-size: 12px;}
- footer p:last-child { font-size: 11px; font-family: pLight; color: #777;}
+ footer a { color: #777;}
+ footer p { margin-top: 7px; font-size: 11px; font-family: pLight; color: #777;}
  footer img { width: 130px; margin: 0 0 0 -7px; }
 
  
