--- a/css/main.css
+++ b/css/main.css
@@ -148,11 +148,12 @@ to { opacity: 1; transform: none; }
 /* --------------- responsible --------------- */
 
 @media screen and (max-width: 768px){
+.mainBanner { height: 95vh; background: url(../source/mainBn_mb.png) center center fixed; background-size: cover; }
  .mainBnLogo { width: 250px; filter: drop-shadow(2px 2px 3px #00000052); } 
- .mainCon p { width: 320px; font-size: 16px; } 
+ .mainCon p { width: 320px; font-size: 14px; } 
 
- .scrollDown { left: 46%; bottom: 5%; padding-top: 45px; font-size: 15px; } 
- .scrollDown span { top: -20px; left: 33%; width: 20px; height: 20px; margin-left: calc( 100vw * -12 / 1920 ); border-left: 2px solid #666; border-bottom: 2px solid #666; } 
+ .scrollDown { left: 46%; bottom: 5%; padding-top: 38px; font-size: 13px; } 
+ .scrollDown span { top: -20px; left: 33%; width: 16px; height: 16px; border-left: 1.5px solid #666; border-bottom: 1.5px solid #666; } 
 
  .mainSection { padding: 0 8%; margin: 30px 0 60px 0; } 
 
