--- a/css/message.css
+++ b/css/message.css
@@ -205,11 +205,28 @@ section { min-height: calc(100vh - 240px); margin-top: 150px; margin-bottom: 120
     .sendBtn { width: 28px; height: 30px; }
     .sendBtn.send { width: 28px; height: 30px; }
 
+    .memMpModal .memMpclose { position: absolute; right: 15%; }
+    .memMpclose button { width: 16px; height: 16px; }
     .memMpModal .memMp { width: 330px; }
     .memMpModal .memMpInner { margin: 0 auto;}
     .memMpModal .lvandN span { padding: 6px 10px; font-size: 12px; }
     .memMpModal .profile { width: 60px; }
     .memMpModal .level { width: 26px; }
+
+    .recoBtn { width: auto; padding: 4px 12px;}
+    .recoBtn .goodMem { width: 16px; height: 16px; }
+    .recoBtn .badMem { width: 16px; height: 16px; }
+
+    .myintroduce { margin-top: 5px;}
+    .myintroduce p { font-size: 13px; font-family: pMedium;}
+    .myintroduce .myintroin { padding: 10px; margin-top: 5px; background: #f1f1f1; font-size: 12px; line-height: 130%;}
+    
+    .subgb { margin: 10px 0;}
+    .subgb .mybirth, .subgb .mygen { display: flex; align-items: baseline; justify-content: flex-start;} 
+    .subgb .mybirth p, .subgb .mygen p { margin: 0 8px 0 0; font-size: 13px; font-family: pMedium; }
+    .subgb .mybirth span { padding: 6px 10px; margin-top: 5px; background: #f1f1f1; font-size: 12px; }
+
+    .subgb .mygen span {padding: 6px 10px; margin-top: 5px; background: #f1f1f1; font-size: 12px; }
 
 } 
 
