--- a/css/sDetail.css
+++ b/css/sDetail.css
@@ -133,3 +133,17 @@ a.ui-button:active, .ui-button:active,
 border: none; background: var(--color-main); } 
 
 .dayPrice { font-size: 12px; font-family: pLight; text-align: center; }
+
+/* --------------- responsible --------------- */
+
+@media screen and (max-width: 768px) {
+    section { margin: 80px 0 30px 0; padding: 0 5.5%; }
+    .banner { height: 200px; border-radius: 10px;}
+
+} 
+
+ @media screen and (min-width: 1024px) { body { } 
+ }
+ 
+ @media screen and (min-width: 1440px) { body { } 
+ }
