--- a/css/sList.css
+++ b/css/sList.css
@@ -1,37 +1,82 @@
-section { min-height: calc(100vh - 240px); margin-top: 170px; margin-bottom: 120px; padding: 0 12%;}
-.postBtn { padding: 9px 13px; background: #55ed50aa; border-radius: 6px; font-size: 15px; transition: all .2s;}
-.postBtn:hover { background: var(--color-sub);}
-.postBtn.hide { display: none;}
+section { min-height: calc(100vh - 240px); margin-top: 170px; margin-bottom: 120px; padding: 0 12%; } 
+.postBtn { padding: 9px 13px; background: #55ed50aa; border-radius: 6px; font-size: 15px; transition: all .2s; } 
+.postBtn:hover { background: var(--color-sub); } 
+.postBtn.hide { display: none; } 
 
-.frmLine { display: flex; align-items: center; justify-content: space-between;  margin-bottom: 30px; margin-top: 10px;}
-.frmLine div { display: flex; align-items: center; margin-top: 10px; }
-.strFrm { display: flex; justify-content: space-around; align-items: center; margin-right: 25px; width: 250px; padding: 10px; background-color: #eee; border-radius: 10px; }
-.strFrm input { font-size: 15px; font-family: pMedium; background: transparent; }
-.strFrm button { width: 25px; height: 25px; background: url(../source/srhIco.png) center center; background-size: cover; cursor: pointer; }
-.sortBtn { display: none; }
-.sortBtn + label {padding: 6px 10px; margin-right: 15px; border-radius: 6px; border: 1px solid #ccc; font-size: 14px; font-family: pRegular; background: #f1f1f1; cursor: pointer; }
-.sortBtn:checked + label {  color:#fff; background: var(--color-main); border-color: var(--color-main);}
+.frmLine { display: flex; align-items: center; justify-content: space-between; margin-bottom: 30px; margin-top: 10px; } 
+.frmLine div { display: flex; align-items: center; margin-top: 10px; } 
+.strFrm { display: flex; justify-content: space-around; align-items: center; margin-right: 25px; width: 250px; padding: 10px; background-color: #eee; border-radius: 10px; } 
+.strFrm input { font-size: 15px; font-family: pMedium; background: transparent; } 
+.strFrm button { width: 25px; height: 25px; background: url(../source/srhIco.png) center center; background-size: cover; cursor: pointer; } 
+.sortBtn { display: none; } 
+.sortBtn + label { padding: 6px 10px; margin-right: 15px; border-radius: 6px; border: 1px solid #ccc; font-size: 14px; font-family: pRegular; background: #f1f1f1; cursor: pointer; } 
+.sortBtn:checked + label { color:#fff; background: var(--color-main); border-color: var(--color-main); } 
 
-.sListThumb{position: relative; overflow: hidden; width: 100%; height: 341px; display: flex; align-items: center; justify-content: center; margin-bottom: 50px; flex-direction: column;}
-.sListThumb img { width: 100%; height: 100%; object-fit: cover; border-radius: 10px;}
-.sListThumb h1{position: absolute; font-family: pSemi; font-size: 50px; color: white; text-shadow: 2px 2px 4px #333333e1;}
-.line{width: 100%; height: 10px; margin-bottom: 25px; border-top: solid 1px var(--color-line);}
+.sListThumb { position: relative; overflow: hidden; width: 100%; height: 341px; display: flex; align-items: center; justify-content: center; margin-bottom: 50px; flex-direction: column; } 
+.sListThumb img { width: 100%; height: 100%; object-fit: cover; border-radius: 10px; } 
+.sListThumb h1 { position: absolute; font-family: pSemi; font-size: 50px; color: white; text-shadow: 2px 2px 4px #333333e1; } 
+.line { width: 100%; height: 10px; margin-bottom: 25px; border-top: solid 1px var(--color-line); } 
 
-.itemAll { width: calc(100vw * 1660 / 1920); margin: 20px auto; display: flex; flex-wrap: wrap; }
-.itemOne { width: calc(100vw * 330 / 1920); height: 335px;  margin: calc(100vw * 20 / 1920) calc(100vw * 42 / 1920) calc(100vw * 20 / 1920) 0; position: relative; 
-border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; cursor: pointer;}
-.itemOne .post { width: 100%; height: 210px; border-radius: 15px 15px 0 0; overflow: hidden;}
-.postImg{width: calc(100vw * 360 / 1920); height: 100%; border-radius: 15px 15px 0 0; overflow: hidden; display: flex; align-items: center; position: relative;}
-.postImg img{ width: 100%; height: 100%; object-fit: cover; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); transition: transform 0.3s; }
-.itemOne:hover .post img {transform: translate(-50%, -50%) scale(1.05);/* 추가: 호버 시 이미지 크기를 110%로 확대 */}
+.itemAll { width: calc(100vw * 1660 / 1920); margin: 20px auto; display: flex; flex-wrap: wrap; } 
+.itemOne { width: calc(100vw * 330 / 1920); height: 335px; margin: calc(100vw * 20 / 1920) calc(100vw * 42 / 1920) calc(100vw * 20 / 1920) 0; position: relative; border-radius: 15px; box-shadow: 1px 1px 7px #8585856b; cursor: pointer; } 
+.itemOne .post { width: 100%; height: 210px; border-radius: 15px 15px 0 0; overflow: hidden; } 
+.postImg { width: calc(100vw * 360 / 1920); height: 100%; border-radius: 15px 15px 0 0; overflow: hidden; display: flex; align-items: center; position: relative; } 
+.postImg img { width: 100%; height: 100%; object-fit: cover; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); transition: transform 0.3s; } 
+.itemOne:hover .post img { transform: translate(-50%, -50%) scale(1.05); /* 추가: 호버 시 이미지 크기를 110%로 확대 */ } 
 
-.postBottom {width: 93%; height: 90px; display: flex; flex-direction: column;  margin: 15px auto; justify-content: space-between}
-.postBottom .infoText{font-size: 17px; line-height: 130%; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;
-overflow: hidden; text-overflow: ellipsis;}
-.locPay{display: flex; align-items: center; justify-content: space-between;}
-.locPay p{font-size: 15px; color: #494949; font-family: pLight; line-height: 130%; margin-top: 10px;}
-.locPay span{padding-top: 7px; font-family: pSemi; font-size: 18px;}
+.postBottom { width: 93%; height: 90px; display: flex; flex-direction: column; margin: 15px auto; justify-content: space-between } 
+.postBottom .infoText { font-size: 17px; line-height: 130%; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis; } 
+.locPay { display: flex; align-items: center; justify-content: space-between; } 
+.locPay p { font-size: 15px; color: #494949; font-family: pLight; line-height: 130%; margin-top: 10px; } 
+.locPay span { padding-top: 7px; font-family: pSemi; font-size: 18px; } 
 
-#soldOut img { filter: grayscale(1.3) brightness(0.7);}
-#soldOut { color: #888;}
-#soldOut .soldOutTxt { position: absolute; width: 100%; top: 27%; color: #ffffffef; font-size: 33px; font-family: pSemi; text-align: center; text-shadow: 1px 1px 5px #000; }
+#soldOut img { filter: grayscale(1.3) brightness(0.7); } 
+#soldOut { color: #888; } 
+#soldOut .soldOutTxt { position: absolute; width: 100%; top: 27%; color: #ffffffef; font-size: 33px; font-family: pSemi; text-align: center; text-shadow: 1px 1px 5px #000; } 
+
+
+/* --------------- responsible --------------- */
+
+@media screen and (max-width: 768px) { 
+ section { padding: 0 5.5%; margin: 80px 0 40px 0; } 
+ .sListThumb { height: 160px; padding-bottom: 20px; margin-bottom: 20px; border-bottom: 1px solid var(--color-line); }
+ .sListThumb h1 { font-size: 22px; text-shadow: 2px 2px 3px #000000ce;}
+
+ .frmLine { margin: 0;}
+ .frmLine div { margin-top: 0; width: 100%; justify-content: space-between; } 
+ .strFrm { width: 70%; margin-right: 0; padding: 5px 6px; border-radius: 8px;} 
+ .strFrm input { width: 80%; font-size: 13px; }
+ .strFrm button { width: 22px; height: 22px; } 
+ .sortBtn + label { font-size: 12px;}
+
+ .itemAll { margin: 0; padding-bottom: 30px; display: flex; flex-direction: column; } 
+ .itemOne { width: 100%; height: 100%; margin: 15px 0; } 
+ .itemOne .post { height: 160px; } 
+ 
+ .postImg { width: 100%; } 
+ .postImg img { width: 100%; height: 100%; object-fit: cover; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); transition: transform 0.3s; } 
+ .postBottom { width: 90%; height: 70px; } 
+ 
+ .postBottom .infoText { font-size: 16px; } 
+ .locPay p { font-size: 13px; } 
+
+ #soldOut .soldOutTxt { font-size: 22px; }
+
+ .noneResult { width: 100%; height: 180px; margin: 20px auto; border-radius: 10px ;}
+ .noneResult img { width: 30px;}
+ .noneResult p { font-size: 12px; text-align: center; }
+
+ .postBtn { padding: 0; background: var(--color-main); font-family: pMedium; box-shadow: 0 1px 6px #36363689; color: #171717; align-content: center; width: 45px; height: 45px; bottom: 30px; right: 25px; border-radius: 50%; text-align: center; position: fixed; z-index: 100; cursor: pointer; } 
+ .postBtn:hover { transition: 0.5s ease; background-color: #efefef; } 
+ .postBtn::before { content: ""; background: url(../source/writeIco.png) center center no-repeat; position: absolute; width: 23px; height: 23px; top: 9px; left: 10px; background-size: cover; } 
+
+ #scrollTop { background: #fff; font-family: pMedium; box-shadow: 0 1px 6px #36363689; color: #171717; align-content: center; width: 45px; height: 45px; bottom: 83px; right: 25px; border-radius: 50%; text-align: center; font-size: 12px; position: fixed; z-index: 100; cursor: pointer; } 
+ #scrollTop::before { content: "\2303"; position: absolute; top: 8px; left: 15px; color: #171717; font-family: pLight; font-size: 18px; } 
+ #scrollTop .topTxt { display: block; margin-top: 21px; font-size: 12px; } 
+}
+ 
+ @media screen and (min-width: 1024px) { body { } 
+ }
+ 
+ @media screen and (min-width: 1440px) { body { } 
+ }
